# acs_lega

./: .gitignore  README.md  project_brief_for_claude.md  pyproject.toml
acs_legal/: hooks.py  modules.txt  renderer.py
acs_legal/acs_legal/: __init__.py
acs_legal/acs_legal/module_def/acs_legal/: acs_legal.json
acs_legal/api/: website.py
acs_legal/public/frontend/: index.html
acs_legal/public/frontend/assets/: index-B3hT6UR3.css  index-BGU07u4i.js  index-BRp3oyGW.js  index-C0vF2T_H.js  index-COq8gYTT.js  index-DFBoXFgu.js  index-DVIIn0TI.css  index-DgydRKRW.css  index-DnXAJiix.js  index-bGl2hFVY.css
acs_legal/www/: acs-legal.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: frappe.ts
frontend/src/components/: ArticleFilter.tsx  ArticlePreviewModal.tsx  ConsultationFlowSection.tsx  ContactSection.tsx  FAQAccordion.tsx  LegalChecklist.tsx  ScrollToSection.tsx  ServiceExplorer.tsx  ServiceIcon.tsx
frontend/src/data/: fallback.ts
frontend/src/hooks/: useSiteData.ts
frontend/src/pages/: ArticlesPage.tsx  ContactPage.tsx  LandingPage.tsx  ServicesPage.tsx
frontend/src/types/: index.ts
